fix position tooltip en mobile (pas parfait mais au moins toujours visible)

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -733,7 +733,7 @@ body p {
         box-shadow: 0px 3px 4px #22365429;
         padding: 0 0 16px 0;
         background-color: #fff;
-        left: -2px !important;
+/*        left: -2px !important;*/
     }
 
         .tooltip.show {
@@ -756,46 +756,50 @@ body p {
         text-align: left;
     }
 
-    .bs-tooltip-auto[x-placement^=bottom] .arrow::before,
-    .bs-tooltip-bottom .arrow::before {
-        bottom: 9px;
-        border-bottom-color: var(--couleur-filet-secondaire);
-        border-width: 0 .5rem .5rem;
-    }
+.bs-tooltip-auto[x-placement^=bottom] .arrow::before,
+.bs-tooltip-bottom .arrow::before {
+    bottom: 9px;
+    left: -2px;
+    border-bottom-color: var(--couleur-filet-secondaire);
+    border-width: 0 .5rem .5rem;
+}
 
-    .bs-tooltip-bottom .arrow::after {
-        content: "";
-        position: absolute;
-        bottom: 10.5px;
-        border-width: 0 .5rem .5rem;
-        transform: translateY(3px);
-        border-color: transparent;
-        border-style: solid;
-        border-bottom-color: #fff;
-    }
+.bs-tooltip-bottom .arrow::after {
+    content: "";
+    position: absolute;
+    bottom: 10.5px;
+    left: -2px;
+    border-width: 0 .5rem .5rem;
+    transform: translateY(3px);
+    border-color: transparent;
+    border-style: solid;
+    border-bottom-color: #fff;
+}
 
-    .bs-tooltip-auto[x-placement^=top] .arrow, .bs-tooltip-top .arrow {
-        bottom: -9px;
-    }
+.bs-tooltip-auto[x-placement^=top] .arrow, .bs-tooltip-top .arrow {
+    bottom: -9px;
+}
 
         .bs-tooltip-auto[x-placement^=top] .arrow::before,
         .bs-tooltip-top .arrow::before {
             bottom: -9px;
+            left: -2px;
             border-top-color: var(--couleur-filet-secondaire);
             border-width: .5rem .5rem 0;
         }
 
 
-        .bs-tooltip-top .arrow::after {
-            content: "";
-            position: absolute;
-            bottom: 1.5px;
-            border-width: 0 .5rem .5rem;
-            transform: rotate(180deg);
-            border-color: transparent;
-            border-style: solid;
-            border-bottom-color: #fff;
-        }
+    .bs-tooltip-top .arrow::after {
+        content: "";
+        position: absolute;
+        bottom: 1.5px;
+        left: -2px;
+        border-width: 0 .5rem .5rem;
+        transform: rotate(180deg);
+        border-color: transparent;
+        border-style: solid;
+        border-bottom-color: #fff;
+    }
 
     .tooltip-header {
         display: flex;
